# edagent

./: .env.example  .gitignore  CONVERSATION_FLOW_FIX.md  CONVERSATION_FLOW_FIX_VERIFICATION.md  CURRENT_STATUS.md  DEBUG_SESSION_NOTES.md  DEVELOPMENT_NOTES.md  GITIGNORE_UPDATE.md  PROJECT_PHILOSOPHY.md  README.md  REDESIGN_PLAN.md  SYSTEM_ARCHITECTURE.md  WORKFLOW_EMAIL_INTEGRATION.md  check_setup.py  list_mcp_tools.py  main.py  mcp_for_agent.md  pyproject.toml
.chainlit/: config.toml
edagent/: __init__.py  app.py  file_utils.py  graph.py  mcp_tools.py  nodes.py  state.py
